--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "proxy": "http://localhost:3333",
   "private": true,
   "dependencies": {
+    "convert-csv-to-json": "0.0.15",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.7.12",
