work in progress edit button

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "styled-components": "^5.0.0-rc.2",
     "styled-icons": "^9.0.1"
