--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "proxy": "http://localhost:3333",
   "private": true,
   "dependencies": {
-    "convert-csv-to-json": "0.0.15",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "express": "^4.17.1",
+    "json2csv": "^4.5.4",
     "mongoose": "^5.7.12",
     "nodemon": "^2.0.1",
     "npm-run-all": "^4.1.5",
